# seatfun-print-agent

./: .env.example  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
.windsurf/rules/: documentation.md
docs/: CHANGELOG.md  architecture.md  distribution.md  protocol.md  tauri-architecture.md  testing-with-tailscale.md
docs/old/: code-signing-guide.md  nodejs-bundling-guide.md  tauri-migration-todo.md  windows-testing-guide.md
fixtures/: sample-job.json
frontend/: settings.html  status.html
scripts/: smoke-print.ts
src/: config.ts  index.ts  logger.ts
src-tauri/: Cargo.toml  settings.html  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/server/: config.rs  fgl.rs  logger.rs  mod.rs  pairing.rs  printer.rs  routes.rs
src/fgl/: commands.ts  index.ts  template.test.ts  template.ts  types.ts
src/fgl/__golden__/: basic.fgl  basic.json  ga-no-seat.fgl  ga-no-seat.json
src/pairing/: heartbeat.ts  keychain.ts  state.ts
src/printer/: client.ts  probe.ts
src/server/: http.ts
src/server/jobs/: runPrintJob.ts
src/server/middleware/: auth.ts  cors.ts
src/server/routes/: health.ts  pair.ts  print.ts  settings.ts  status.ts  test-print.ts
